# 0g-da-encoder

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: app_extrinsic.rs  asdr.rs  constants.rs  da_block.rs  data_proof_v2.rs  kate_commitment.rs  keccak256.rs  lib.rs  opaque_extrinsic.rs  sha2.rs  traits.rs
core/src/data_lookup/: compact.rs  mod.rs
core/src/header/: mod.rs
core/src/header/extension/: mod.rs  v3.rs
core/src/traits/: extended_block.rs  extended_header.rs  get_app_id.rs
crates/amt/: Cargo.toml
crates/amt/src/: blob.rs  ec_algebra.rs  error.rs  export.rs  lib.rs  power_tau.rs  proofs.rs  prove_params.rs  utils.rs
crates/amt/src/prove_params/: fast_serde.rs  generate.rs  mod.rs  prove.rs  verify.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: lib.rs  transforms.rs  types.rs
crates/kate/: Cargo.toml
crates/kate-recovery/: Cargo.toml
crates/kate-recovery/src/: commitments.rs  couscous.rs  data.rs  matrix.rs
crates/kate/src/: com.rs  lib.rs
crates/kate/src/gridgen/: mod.rs
crates/ppot2ark/: Cargo.toml  gen_test_ppot.sh
crates/ppot2ark/src/: adapter.rs  lib.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: encoder.proto
grpc/src/: deprecated.rs  lib.rs  service.rs
kate/: Cargo.toml
kate/benches/: reconstruct.rs
kate/recovery/: Cargo.toml
kate/recovery/src/: com.rs  couscous.rs  proof.rs
kate/src/: com.rs  lib.rs
kate/src/gridgen/: mod.rs
run/: config.toml
stress/: Cargo.toml
stress/src/: main.rs
types/src/: lib.rs
