[workspace]
resolver = "2"
members = [
	"crates/amt",
	"crates/encoder",
	"crates/ppot2ark",
	"grpc",
	"types",
	"server",
	"stress",
]

[workspace.dependencies]
types = { path = "./types" }
amt = { path = "./crates/amt", default-features = false }
grpc = { path = "./grpc" } 
server = { path = "./server" } 
encoder = {path = "./crates/encoder" }

[profile.dev.package]
rayon = { opt-level = 3 }
rayon-core = { opt-level = 3 }
ark-bn254 = { opt-level = 3 }
ark-ec = { opt-level = 3 }
ark-ff = { opt-level = 3 }
ark-poly = { opt-level = 3 }
ark-serialize = { opt-level = 3 }
ark-std = { opt-level = 3 }