[package]
name = "stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerog-core = { path = "../core" }
kate = { path = "../kate" }
grpc = { path = "../grpc" }
types = { path = "../types" }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

tokio = { version = "1.28.1", features = ["full"] }
rand = "0.8.5"
