[package]
name = "amt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { version = "0.12", default-features = false }
rayon = "1.10"
base64 = "0.22"
rand = "0.8"

ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"

once_cell = "1.19"

[dev-dependencies]
ark-bn254 = "0.4"