[package]
name = "encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-std = { version = "0.4.0", features = ["getrandom"] }
ark-ec = "0.4.0"

[dev-dependencies]
rand = "0.8"
test-case = { version = "1.2.3" }
