[package]
name = "zg-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-poly = { version = "0.4" }
ark-std = { version = "0.4", features = ["getrandom"] }
ark-ec = { version = "0.4" }
ark-serialize = { version = "0.4", features = ["derive"] }
binary-merkle-tree = "^15"
keccak-hasher = "0.16"
hash-db = "0.16"
amt = { workspace = true, default-features = false }
once_cell = "1.19"

[dev-dependencies]
rand = "0.8"
test-case = { version = "1.2.3" }

[features]
default = []
parallel = ["ark-poly/parallel", "ark-ec/parallel"]